fixed dashboard and user session

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -32,7 +32,7 @@
             <div class="col-md-8">
                 <div class="d-flex align-items-center gap-2 mb-4">
                     <span>✨</span>
-                    <h4 class="mb-0">Welcome back, Ayman!</h4>
+                    <h4 class="mb-0">Welcome back, {{ full_name.split()[0] }}!</h4>
                 </div>
 
                 <div class="welcome-card mb-4">
