Fixed dashboard dynamic

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -22,7 +22,7 @@
                 <button class="action-button">
                     <i class="fas fa-bell"></i>
                 </button>
-                <div class="profile-circle">JS</div>
+                <div class="profile-circle">{{ initials }}</div>
             </div>
         </div>
     </nav>
@@ -106,8 +106,8 @@
             <div class="col-md-4">
                 <div class="module-card mb-4">
                     <div class="text-center">
-                        <div class="profile-circle mx-auto mb-3">JS</div>
-                        <h5>Anang Ayman</h5>
+                        <div class="profile-circle mx-auto mb-3">{{ initials }}</div>
+                        <h5>{{ full_name }}</h5>
                         <p class="text-secondary mb-2">ASU Prep Casa Grande</p>
                         <button class="btn btn-light">
                             <i class="fas fa-cog me-2"></i>
