Fixed some routing and initials

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -70,7 +70,7 @@
                             <small class="badge-custom">MODULE</small>
                             <h5 class="mt-2">Bisindo Letters</h5>
                         </div>
-                        <button class="action-button">
+                        <button class="action-button" onclick="window.location.href='/gamepage'">
                             <i class="fas fa-play"></i>
                         </button>
                     </div>
