--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -43,7 +43,7 @@
                         Resume Learning
                         <i class="fas fa-arrow-right"></i>
                     </button>
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ffffff' width='120' height='120'%3E%3Cpath d='M12.7 17.5l1.3-.4c1.1-.3 2.3-.6 3.4-1.1l.4-.2c.3-.1.6-.3.9-.5.3-.2.6-.4.8-.6.2-.2.4-.4.6-.7.2-.3.3-.5.4-.8.1-.3.1-.6.1-.9 0-.3-.1-.7-.2-1-.1-.3-.3-.6-.5-.9-.2-.3-.4-.5-.7-.7-.3-.2-.5-.4-.8-.5-.3-.1-.6-.2-.9-.3-.3-.1-.7-.1-1-.1-.4 0-.7.1-1 .2-.3.1-.6.3-.9.5-.3.2-.5.4-.7.7-.2.3-.4.5-.5.8-.1.3-.2.6-.3.9 0 .3-.1.7 0 1h-2c0-.4.1-.8.2-1.2.1-.4.3-.8.5-1.1.2-.4.5-.7.8-1 .3-.3.7-.6 1.1-.8.4-.2.8-.4 1.3-.5.4-.1.9-.2 1.4-.2.5 0 .9.1 1.4.2.5.1.9.3 1.3.5.4.2.8.5 1.1.8.3.3.6.7.8 1 .2.4.4.8.5 1.2.1.4.2.8.2 1.3 0 .4-.1.8-.2 1.2-.1.4-.3.8-.5 1.1-.2.3-.5.7-.8 1-.3.3-.7.5-1 .7-.4.2-.8.4-1.2.5-.4.1-.9.2-1.3.3l-1.3.4v1.5h-2v-3z'/%3E%3C/svg%3E" class="rocket-img" alt="Rocket">
+                    <img src="/static/Assets/Rocket.png" class="rocket-img" alt="Rocket">
                 </div>
 
                 <div class="stats-container">
