Integrated Pose Capture to the game

--- a/templates/ML_game.html
+++ b/templates/ML_game.html
@@ -70,9 +70,9 @@
                 </div>
     
                 <!-- Answer choices -->
-                <div id="choices" class="options-grid">
-                    <!-- Buttons will be inserted dynamically here -->
-                </div>
+                <div id="countdown"></div>
+                <button id="start-btn">Start Pose Capture</button>
+                <div id="result"></div>
     
                 <!-- Feedback -->
                 <div id="feedback" class="text-center fw-bold mb-3" style="font-size: 1.2rem;"></div>
