Changed module name

--- a/templates/gamepage.html
+++ b/templates/gamepage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <h4 class="mb-4">Geography Module</h4>
+        <h4 class="mb-4">Bisindo Letters</h4>
         
         <div class="stats-container">
             <div class="stat-item">
