--- a/static/videostyle.css
+++ b/static/videostyle.css
@@ -67,11 +67,28 @@
     overflow-y: auto;
 }
 
+  .progress-bar-container {
+    width: 100%;
+    height: 6px;
+    background: #e9ecef;
+    border-radius: 3px;
+    margin-bottom: 2rem;
+}
+
+.progress-bar-fill {
+    height: 100%;
+    background: linear-gradient(90deg, #4153ef,#8e44ef);
+    border-radius: 3px;
+    width: 45%;
+    transition: width 0.3s ease;
+}
+
+
 .lesson-item {
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 1rem;
-    background: #f8fafc;
+    color: black;
     transition: all 0.3s ease;
     cursor: pointer;
 }
