Added a video for learning sign language

--- a/templates/videolearning.html
+++ b/templates/videolearning.html
@@ -50,7 +50,7 @@
                 <p>Watch the video below to learn how to recognize and sign the letter <strong>U</strong> in Bisindo (Indonesian Sign Language). Follow along and practice!</p>
 
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Bisindo Letter U Tutorial" allowfullscreen></iframe>
+                <iframe src="../static/Assets/Learn ASL Alphabet Video.mp4" title="Bisindo Letter U Tutorial" allowfullscreen></iframe>
             </div>
 
             <div class="tips">
