Changed title of video learning

--- a/templates/videolearning.html
+++ b/templates/videolearning.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="main_wrapper">
             <div class="main-content">
-                <h1>🎥 Learn with Video: Bisindo Letter "U"</h1>
+                <h1>🎥 Learn Bisindo Letter </h1>
                 <p>Watch the video below to learn how to recognize and sign the letter <strong>U</strong> in Bisindo (Indonesian Sign Language). Follow along and practice!</p>
 
             <div class="video-wrapper">
