--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -37,7 +37,7 @@
                     <small class="text-white-50 mb-2 d-block">Let's start</small>
                     <h3 class="mb-3">Bisindo Letters</h3>
                     <p>Test your skills in Bisindo Letters, where you'll learn to express written communication effectively using Bahasa Isyarat Indonesia (Indonesian Sign Language).</p>
-                    <button class="resume-btn" onclick="window.location.href='/gamepage'">
+                    <button class="resume-btn" onclick="window.location.href='/video_learning'">
                         Resume Learning
                         <i class="fas fa-arrow-right"></i>
                     </button>
@@ -68,7 +68,7 @@
                             <small class="badge-custom">MODULE</small>
                             <h5 class="mt-2">Bisindo Letters</h5>
                         </div>
-                        <button class="action-button" onclick="window.location.href='/gamepage'">
+                        <button class="action-button" onclick="window.location.href='/video_learning'">
                             <i class="fas fa-play"></i>
                         </button>
                     </div>
