Added edit account

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -106,6 +106,10 @@
                     <div class="text-center">
                         <div class="profile-circle mx-auto mb-3">{{ initials }}</div>
                         <h5>{{ full_name }}</h5>
+                        <button class="btn btn-light" onclick="window.location.href='/edit-account'">
+                            <i class="fas fa-cog me-2"></i>
+                            Edit Settings
+                        </button>
                     </div>
                 </div>
 
