Fixed some logic, made it cleaner

--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -233,12 +233,12 @@
     </style>
 </head>
 <body>
-    <button type="button" class="universal-history-back-button" onclick="window.location.href='{{ url_for('auth.dashboard') }}'" title="Go Back">
+    <button type="button" class="universal-history-back-button" onclick="window.location.href='\dashboard'" title="Go Back">
         <i class="fas fa-arrow-left"></i> Back to dashboard
     </button>
 
     <div class="navigation-buttons">
-        <button class="nav-btn" onclick="window.location.href='{{ url_for('auth.dashboard') }}'"><i class="fas fa-arrow-left"></i> Back to Dashboard</button>
+        <button class="nav-btn" onclick="window.location.href='\dashboard'"><i class="fas fa-arrow-left"></i> Back to Dashboard</button>
     </div>
 
     <div class="main-content-wrapper">
