--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -10,8 +10,8 @@
     <script src="https://kit.fontawesome.com/7fb2b68ee1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='loginstyle.css') }}"> </head>
 <body>
-    <button class="close-button" onclick="window.location.href='{{ url_for('auth.home') }}'">×</button>
-    <button class="sign-up" onclick="window.location.href='{{ url_for('auth.login') }}'">LOGIN</button>
+    <button class="close-button" onclick="window.location.href='/'">×</button>
+    <button class="sign-up" onclick="window.location.href='\login'">LOGIN</button>
 
     <div class="login-container"> <h1>Forgot Password</h1>
         
