--- a/templates/gamepage.html
+++ b/templates/gamepage.html
@@ -59,7 +59,9 @@
             </div>
         </div>
     </div>
-    
+
+    <audio id="correct-sound" src="{{ url_for('static', filename='sounds/correct.mp3') }}" preload="auto"></audio>
+    <audio id="incorrect-sound" src="{{ url_for('static', filename='sounds/incorrect.mp3') }}" preload="auto"></audio>
 
     <script src="static/gamelogic.js"></script>
 </body>
