--- a/templates/gamepage.html
+++ b/templates/gamepage.html
@@ -52,7 +52,7 @@
                 <div class="progress-bar-container internal-progress">
                     <div class="progress-bar-fill" id="progress-bar"></div>
                 </div>
-                <img id="sign-image" src="/static/placeholder.png" alt="Sign Image" class="world-icon">
+                <img id="sign-image" src="/static/Assets/great_job.png" alt="Sign Image" class="world-icon">
                 <div id="question" class="question-text">Loading question...</div>
                 <div id="choices" class="options-grid"></div>
                 <div id="feedback" class="text-center fw-bold mb-3" style="font-size: 1.2rem;"></div>
